# tally

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  run.sh
backend/: pyproject.toml
backend/app/: __init__.py  alerts.py  alerts_cli.py  api_cards.py  api_categories.py  api_settings.py  api_transactions.py  auth.py  canonical.py  categorize_llm.py  compare.py  config.py  db.py  demo.py  events.py  main.py  models.py  newcode.py  ocr_apple.py  pace.py  plaid_link.py  reimburse.py  secretbox.py  security.py  seed.py  spend.py  subscriptions_engine.py  sync_cli.py
backend/app/ingest/: __init__.py  apple_csv.py  common.py  convergence.py  ofx.py  pipeline.py  wf_pdf.py
backend/ocr/: vision_ocr.swift
backend/tests/: conftest.py  test_alerts.py  test_auth_gate.py  test_categories.py  test_categorize_llm.py  test_compare.py  test_convergence.py  test_demo.py  test_ocr_flow.py  test_ofx.py  test_pace.py  test_parsers.py  test_plaid_mapping.py  test_reimburse.py  test_reimburse_rules.py  test_self_transfer.py  test_settings_api.py  test_setup_code.py  test_subscriptions_engine.py  test_transactions_api.py  test_upload.py  test_window.py
backend/tests/fixtures/: apple_bad.csv  apple_good.csv  dupe_fitid.ofx  sample_v1.ofx  sample_v2.qfx  wf_autograph_good.txt  wf_checking_good.txt
deploy/: Dockerfile  README.md  tally-alerts.plist.template  tally-server.plist.template  tally-sync.plist.template  tally-sync.service  tally-sync.timer  tally.service
frontend/: index.html
tools/: backup.sh  install_hooks.sh  install_launchd.sh  privacy_scan.py
(+1 files in other folders)
