[project]
name = "tally"
version = "1.0.0"
description = "Local-first personal finance: penny-reconciled statements, Plaid sync, rewards routing"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=44.0.0",
    "fastapi>=0.138.2",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "plaid-python>=40.1.0",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    "sqlmodel>=0.0.39",
    "sse-starlette>=3.4.5",
    "uvicorn[standard]>=0.49.0",
    "webauthn>=2.8.0",
]

[project.optional-dependencies]
# OCR fallback for non-macOS hosts (macOS uses the bundled Vision helper).
# Also needs the tesseract binary: apt install tesseract-ocr
ocr = [
    "pytesseract>=0.3.13",
    "pillow>=11.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
